<resources>

    <string name="app_name">Firmadetaljer</string>
    <string name="main_activity_title">Firmasøk</string>
    <string name="search_item_title">Søk</string>
    <string name="search_request_error_message">Kunne ikke søke etter firma</string>
    <string name="company_search_name_hint">Firmanavn…</string>
    <string name="company_search_org_number_hint">Organisasjonsnummer(9 siffer)…</string>
    <string name="title_activity_company_detail">Firmadetaljer</string>
    <string name="company_detail_not_loaded">Kunne ikke laste inn firmadetaljer</string>
    <string name="company_not_found">Fant ikke firma</string>
    <string name="select_firmanavn">Firmanavn</string>
    <string name="select_org_number">Org. nummer</string>
    <string name="viewed_companies_header">Viste firmadetaljer</string>
    <string name="search_results_header">Søkeresultat</string>
    <string name="onboarding_explanatory_text">Start ved å trykke på søkeikonet for å finne firma</string>
    <string name="detail_navigation_image_view_description">Navigeringspil</string>
    <string name="delete_search_history">Slett søkehistorikk</string>
    <string name="add_filters">Filtrer søk på antall ansatte</string>

    <string name="company_detail_heading_details">Nøkkeldetaljer</string>
    <string name="company_detail_heading_institusjonell_sektor_kode">Institusjonell sektorkode</string>
    <string name="company_detail_heading_naeringskode1">Næringskode 1</string>
    <string name="company_detail_heading_naeringskode2">Næringskode 2</string>
    <string name="company_detail_heading_naeringskode3">Næringskode 3</string>
    <string name="company_detail_heading_postadresse">Postadresse</string>
    <string name="company_detail_heading_forettningsadresse">Forretningsadresse</string>
    <string name="company_detail_heading_beliggenhetsadresse">Beliggenhetsadresse</string>

    <string name="company_detail_details_organisasjonsnummer">Organisasjonsnummer</string>
    <string name="company_detail_details_stiftelsesdato">Stiftelsesdato</string>
    <string name="company_detail_details_registrert_i_enhetsregisteret">Registrert i enhetsregisteret</string>
    <string name="company_detail_details_oppstartsdato">Oppstartsdato</string>
    <string name="company_detail_details_eierskife">Eierskifte</string>
    <string name="company_detail_details_organisasjonsform">Organisasjonsform</string>
    <string name="company_detail_details_hjemmeside">Hjemmeside</string>
    <string name="company_detail_details_registrert_i_frivillighetsregisteret">Registrert i frivillighetsregisteret</string>
    <string name="company_detail_details_registrert_i_mva_registeret">Registrert i MVA-registeret</string>
    <string name="company_detail_details_registrert_i_foretaksregisteret">Registrert i foretaksregisteret</string>
    <string name="company_detail_details_registrert_i_stiftelsesregisteret">Registrert i stiftelsesregisteret</string>
    <string name="company_detail_details_antall_ansatte">Antall ansatte</string>
    <string name="company_detail_details_sist_innsendte_årsregnskap">Sist innsendte årsregnskap</string>
    <string name="company_detail_details_konkurs">Konkurs</string>
    <string name="company_detail_details_under_avvikling">Under avvikling</string>
    <string name="company_detail_details_under_tvangsavvikling_eller_tvangsoppløsning">Under tvangsavvikling/tvangsoppløsning</string>
    <string name="company_detail_details_overordnet_enhet">Overordnet enhet</string>

    <string name="company_detail_kode_kode">Kode</string>
    <string name="company_detail_kode_beskrivelse">Beskrivelse</string>

    <string name="company_detail_adresse_postadresse">Postadresse</string>
    <string name="company_detail_adresse_forretningsadresse">Forretningsadresse</string>
    <string name="company_detail_adresse_beliggenhetsadresse">Beliggenhetsadresse</string>
    <string name="company_detail_adresse_postnummer">Postnummer</string>
    <string name="company_detail_adresse_poststed">Poststed</string>
    <string name="company_detail_adresse_kommunenummer">Kommunenummer</string>
    <string name="company_detail_adresse_kommune">Kommune</string>
    <string name="company_detail_adresse_landskode">Landskode</string>
    <string name="company_detail_adresse_land">Land</string>

    <string name="yes">Ja</string>
    <string name="no">Nei</string>

    <string name="location_not_found">Fant ikke lokasjon</string>

    <string name="toggle_night_mode">Mørkt tema</string>
    <string name="title_activity_company_location_map">Kart</string>

    <string name="filter_employees_title">Filtrer søk på antall ansatte</string>
    <string name="filter_all_employees">Ingen filter</string>
    <string name="filter_employees_less_than_or_equal_to_5">5 eller færre ansatte</string>
    <string name="filter_employees_between_5_and_201">Fra 6 til 200 ansatte</string>
    <string name="filter_employees_more_than_200">Mer enn 200 ansatte</string>
    <string name="ok">OK</string>

</resources>
