<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_options_frame_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/search_filter_dialog_width"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSearchFilterDialogHeaderBackground"
                android:padding="@dimen/search_filter_dialog_outer_padding"
                android:text="@string/filter_employees_title"
                android:textColor="@color/colorSearchFilterDialogHeaderText"
                android:textSize="@dimen/search_filter_dialog_title_text_size" />

            <RadioGroup
                android:id="@+id/filter_employees_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/search_filter_dialog_outer_padding">

                <RadioButton
                    android:id="@+id/employees_all"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_filter_dialog_radio_button_height"
                    android:paddingStart="@dimen/search_filter_dialog_radio_button_to_text_padding"
                    android:text="@string/filter_all_employees"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/employees_less_than_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_filter_dialog_radio_button_height"
                    android:paddingStart="@dimen/search_filter_dialog_radio_button_to_text_padding"
                    android:text="@string/filter_employees_less_than_or_equal_to_5"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/employees_between_5_and_201"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_filter_dialog_radio_button_height"
                    android:paddingStart="@dimen/search_filter_dialog_radio_button_to_text_padding"
                    android:text="@string/filter_employees_between_5_and_201"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

                <RadioButton
                    android:id="@+id/employees_more_than_200"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_filter_dialog_radio_button_height"
                    android:paddingStart="@dimen/search_filter_dialog_radio_button_to_text_padding"
                    android:text="@string/filter_employees_more_than_200"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:ignore="RtlSymmetry" />

            </RadioGroup>

            <Button
                android:id="@+id/select_filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/search_filter_dialog_outer_padding"
                android:background="@color/colorSearchFilterDialogButtonBackground"
                android:text="@string/ok"
                android:textColor="@color/colorSearchFilterDialogButtonText"
                android:textSize="@dimen/search_filter_dialog_button_text_size" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>